# APA

./: README.md
Esame310119/: CMakeLists.txt  Graph.c
L00/es1/: main.c
L00/es2/: main.c  textFile.txt
L00/es4/: compiling_error.txt  main.c  textFile.txt
L01/Es1/: campionato.txt  main.c
L01/Es2/: es2.c  main.c
L01/Es3/: main.c
L02/Es1/: main.c
L02/Es2/: main.c
L02/Es3/: CMakeLists.txt  main.c
L03/Es1/: CMakeLists.txt  main.c
L03/Es2/: CMakeLists.txt
L04/E01/: main.c
L04/E02/: CMakeLists.txt  main.c
L04/E03/: main.c
L04/E05/: CMakeLists.txt  main.c
L05/E01/: main.c
L05/E02/: main.c
L05/E03/: CMakeLists.txt  main.c
L06/E01/: main.c
L06/E02/: CMakeLists.txt  main.c
L07/E01/: main.c
L07/E02/: CMakeLists.txt  main.c
L07/E03/: CMakeLists.txt  main.c
L08/E02/: CMakeLists.txt  main.c
L08/E02_Vecchio/: main.c
L08/E03/: inventario.c  inventario.h  personaggi.c
L08/E03_Vecchio/: CMakeLists.txt  inventario.h  personaggi.c  personaggi.h
L09/E02/: main.c
L09/E02_Vecchio/: main.c
L09/E03/: CMakeLists.txt  equipArray.c  equipArray.h  inv.c  inv.h  invArray.c  invArray.h  main.c  pg.c  pg.h  pgList.c  pgList.h  stat.c  stat.h
L09/E03_Vecchio/: CMakeLists.txt  inventario.c  main.c  personaggi.h
L10/E01/: CMakeLists.txt  main.c
L10/E02/: main.c
L10/E03/: CMakeLists.txt  ST.c  ST.h  graph.c  graph.h  main.c
L11/E01/: BSTquotazioniGiornaliere.c  BSTquotazioniGiornaliere.h  CMakeLists.txt  ListTitoli.c  ListTitoli.h  data.c  data.h  main.c  titolo.c  (+3 more)
L12/: grafo.txt
s248636_310119/: Graph.h  ST.c  ST.h  file1.txt  main.c
(+62 files in other folders)
